--- a/amazonclone.html
+++ b/amazonclone.html
@@ -27,29 +27,52 @@
         <main class="container mx-auto p-4">
             <div class="grid grid-cols-4 gap-4">
                 <div class="bg-white p-4 shadow-md">
-                    <h2 class="text-xl font-bold">Product 1</h2>
+                    <h2 class="text-xl font-bold">Sneakers</h2>
                     <img src="download (1).jpeg" alt="Product 1" class="w-full">
                     <p class="text-sm">Price: $100</p>
                     <button class="bg-yellow-500 text-black p-2 rounded-lg mt-2">Add to Cart</button>
                 </div>
                 <div class="bg-white p-4 shadow-md">
-                    <h2 class="text-xl font-bold">Product 2</h2>
+                    <h2 class="text-xl font-bold">Bag</h2>
                     <img src="download (2).jpeg" alt="Product 2" class="w-full">
                     <p class="text-sm">Price: $200</p>
                     <button class="bg-yellow-500 text-black p-2 rounded-lg mt-2">Add to Cart</button>
                 </div>
                 <div class="bg-white p-4 shadow-md">
-                    <h2 class="text-xl font-bold">Product 3</h2>
+                    <h2 class="text-xl font-bold">Sneakers</h2>
                     <img src="download.jpeg" alt="Product 3" class="w-full">
                     <p class="text-sm">Price: $300</p>
                     <button class="bg-yellow-500 text-black p-2 rounded-lg mt-2">Add to Cart</button>
                 </div>
                 <div class="bg-white p-4 shadow-md">
-                    <h2 class="text-xl font-bold">Product 4</h2>
+                    <h2 class="text-xl font-bold">Sneakers</h2>
                     <img src="download (1).jpeg" alt="Product 4" class="w-full">
                     <p class="text-sm">Price: $400</p>
                     <button class="bg-yellow-500 text-black p-2 rounded-lg mt-2">Add to Cart</button>
                 </div>
+                <div class="bg-white p-4 shadow-md">
+                    <h2 class="text-xl font-bold">Bag</h2>
+                    <img src="download (2).jpeg" alt="Product 5" class="w-full">
+                    <p class="text-sm">Price: $500</p>
+                    <button class="bg-yellow-500 text-black p-2 rounded-lg mt-2">Add to Cart</button>
+            </div>
+            <div class="bg-white p-4 shadow-md">
+                <h2 class="text-xl font-bold">Shoes</h2>
+                <img src="download.jpeg" alt="Product 6" class="w-full">
+                <p class="text-sm">Price: $600</p>
+                <button class="bg-yellow-500 text-black p-2 rounded-lg mt-2">Add to Cart</button>
+            </div>
+            <div class="bg-white p-4 shadow-md">
+                <h2 class="text-xl font-bold">Shoes</h2>
+                <img src="download (1).jpeg" alt="Product 7" class="w-full">
+                <p class="text-sm">Price: $700</p>
+                <button class="bg-yellow-500 text-black p-2 rounded-lg mt-2">Add to Cart</button>
+            </div>
+            <div class="bg-white p-4 shadow-md">
+                <h2 class="text-xl font-bold">Bag</h2>
+                <img src="download (2).jpeg" alt="Product 8" class="w-full">
+                <p class="text-sm">Price: $800</p>
+                <button class="bg-yellow-500 text-black p-2 rounded-lg mt-2">Add to Cart</button>
             </div>
         </main>
         <footer class="bg-gray-900 text-white mx-200s p-4">
