--- a/amazonclone.html
+++ b/amazonclone.html
@@ -21,6 +21,9 @@
                 <div class="flex items-center">
                     <input type="text" class="p-2 rounded-l-lg" placeholder="Search">
                     <button class="bg-yellow-500 text-black p-2 rounded-r-lg">Search</button>
+                    <button class="bg-yellow-500 text-black p-2 rounded-lg ml-4">Cart</button>
+                    <button class="bg-yellow-500 text-black p-2 rounded-lg ml-4">Login</button>
+                    
                 </div>
             </div>
         </header>
