--- a/amazonclone.html
+++ b/amazonclone.html
@@ -23,7 +23,7 @@
                     <button class="bg-yellow-500 text-black p-2 rounded-r-lg">Search</button>
                     <button class="bg-yellow-500 text-black p-2 rounded-lg ml-4">Cart</button>
                     <button class="bg-yellow-500 text-black p-2 rounded-lg ml-4">Login</button>
-                    
+
                 </div>
             </div>
         </header>
@@ -81,6 +81,14 @@
         <footer class="bg-gray-900 text-white mx-200s p-4">
             <div class="container mx-auto">
                 <p class="text-center">Amazon Clone &copy; 2025</p>
+                <div class="flex justify-center mt-4">
+                    <i class="fab fa-facebook fa-2x"></i>
+                    <i class="fab fa-twitter fa-2x ml-4"></i>
+                    <i class="fab fa-instagram fa-2x ml-4"></i>
+                    <i class="fab fa-linkedin fa-2x ml-4"></i>
+                    <i class="fab fa-youtube fa-2x ml-4"></i>
+                    </div>
+                
             </div>
         </footer>
     </body>
