--- a/amazonclone.html
+++ b/amazonclone.html
@@ -77,7 +77,13 @@
                 <p class="text-sm">Price: $800</p>
                 <button class="bg-yellow-500 text-black p-2 rounded-lg mt-2">Add to Cart</button>
             </div>
+            </div>
+            <div class="flex justify-center mt-4">
+                <button class="bg-yellow-500 text-black p-2 rounded-lg">Load More</button>
+            </div>
+            
         </main>
+
         <footer class="bg-gray-900 text-white mx-200s p-4">
             <div class="container mx-auto">
                 <p class="text-center">Amazon Clone &copy; 2025</p>
