--- a/amazonclone.html
+++ b/amazonclone.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <header class="bg-gray-900 text-white">
+        <header class="bg-gray-900 text-white sticky top-0 z-50">
             <div class="container mx-auto flex items-center justify-between p-4">
                 <div class="flex items-center">
                     <img src="https://pngimg.com/uploads/amazon/amazon_PNG11.png" alt="Amazon Logo" class="w-32">
@@ -84,7 +84,7 @@
             
         </main>
 
-        <footer class="bg-gray-900 text-white mx-200s p-4">
+        <footer class="bg-gray-900 text-white mx-200s p-4 sticky bottom-0">
             <div class="container mx-auto">
                 <p class="text-center">Amazon Clone &copy; 2025</p>
                 <div class="flex justify-center mt-4">
